--- a/html_build/usercontrols/photo-player/templates/tags.html
+++ b/html_build/usercontrols/photo-player/templates/tags.html
@@ -1,5 +1,9 @@
 <div class="prof-name-area"></div>
 <div class="tags-outer-h">
+	<div class="photo-detail photo-detail-h ">
+		<span>Tags</span>
+		<a href="javascript: void(0);" class="photo-player-detail-icons photo-player-detail-arrow photo-player-detail-arrow-h up-arrow-photoplayer"></a>
+	</div>
 	<ul id="tags-list"></ul>
 </div>
 <div class="clear">
