--- a/html_build/pages/team/templates/header.html
+++ b/html_build/pages/team/templates/header.html
@@ -5,7 +5,7 @@
 	<div class="profile-heading">
             <h3 class="username">{{org_sport_link_obj.org.org_name	}}</h3>
             <h4>{{org_sport_link_obj.sport.sport_name}} | {{complevels_obj.complevel_name}} | {{seasons_obj.season_name}} '{{year}}</h4>
-            <a href="javascript: void(0);" title="Edit Team">Edit Team</a>
+            <a href="javascript: void(0);" id="editTeamLink" title="Edit Team">Edit Team</a>
             
             <div id="votes-area-h"></div>
     </div>
