--- a/html_build/pages/team/templates/layout.html
+++ b/html_build/pages/team/templates/layout.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	
-	<div class="green-left-heading">GAMES</div>
+	<div class="green-left-heading game-green-heading hide">GAMES</div>
 	<div id="games_div" class="clearfix">
 	</div>
 	
