moved facebook stuff to onlick

--- a/html/pages/signup/templates/registration_landing.html
+++ b/html/pages/signup/templates/registration_landing.html
@@ -6,7 +6,7 @@
 	<div id="mainreg">
 
 
-		<div id="fbpane">
+		<div id="fbpane" onclick="routing.signupFacebook(event)">
 			<div id="label">
 				Connect with Facebook
 			</div>
