more fb login work

--- a/html/pages/signup/templates/registration.html
+++ b/html/pages/signup/templates/registration.html
@@ -8,7 +8,7 @@
 			<span class="regheader"> Show us what you got</span>
 		</div>
 
-		<div id="fbpane" onclick="routing.signupFacebook(event)">
+		<div id="fbpane">
 			<div id="label">
 				Connect with Facebook
 			</div>
