--- a/html/pages/signup/templates/registration_landing.html
+++ b/html/pages/signup/templates/registration_landing.html
@@ -6,11 +6,12 @@
 	<div id="mainreg">
 
 
-		<div id="fbpane" onclick="routing.signupFacebook(event)">
+		<div id="fbpane">
+			<a href="#" style="display: block; width: 100%; height: 100%;">
 			<div id="label">
 				Connect with Facebook
 			</div>
-			<div id="fblogo"><span></span></div>
+			<div id="fblogo"><span></span></div></a>
 		</div>
 		<div class ="regor">or</div>
 		<div id="regpanemain">
