--- a/html_build/pages/signup/templates/registration_landing.html
+++ b/html_build/pages/signup/templates/registration_landing.html
@@ -7,10 +7,11 @@
 
 
 		<div id="fbpane">
+			<a href="#" style="display: block; width: 100%; height: 100%;">
 			<div id="label">
 				Connect with Facebook
 			</div>
-			<div id="fblogo"><span></span></div>
+			<div id="fblogo"><span></span></div></a>
 		</div>
 		<div class ="regor">or</div>
 		<div id="regpanemain">
