--- a/html_build/usercontrols/photo-player/templates/comment-form.html
+++ b/html_build/usercontrols/photo-player/templates/comment-form.html
@@ -1,17 +1,11 @@
-
-
+<a href="javascript: void(0);" class="add-comment-h">Comment</a>
 {{#payload}}
-<div class="photo-player-coment"> 
-	<div class="user-photo">
-		<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
-	</div> 
-    <div class="content">
-    	<!--span class="comment-date">{{poster}} {{comment_date}}</span-->
-    	<span class="user-comment">{{user.first_name}} </span>
-    	<p class="comment-text">{{{comment}}}</p>
-    </div>
+<form class="add-comment-form-h" method="post" action="#">
+<div class="row-fluid">
+    <div class="field-message submit-result"></div>
+    <textarea id="new-comment" class="photoplayer-comment-box" class="" placeholder="Add a comment" ></textarea>
+    <!-- <br/> -->
+    <!-- <input type="button" id="comment-submit" value="Submit"/> -->
 </div>
+</form>
 {{/payload}}
-
-
-
