positioning here was messing with tagging section.

--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -222,7 +222,7 @@ li.sport a:hover {
 	text-decoration: underline;
 }
 
-.fixed-icons {
+#menu .fixed-icons {
 	position: absolute;
 	top: 68px;
 	left: -110px;
