--- a/html/packages/game-schedules/templates/schedule-list.html
+++ b/html/packages/game-schedules/templates/schedule-list.html
@@ -2,12 +2,12 @@
 	<div>
 		{{#eventPage}}
 			<span class="event-sport-label">{{eventPage}} Events</span>
-			<a href="javascript: void(0);" title="add team" class="add-event-h right-with-icon">Add Event / Meet</a>
+			<a href="javascript: void(0);" title="Add an Event / Meet" class="add-event-h right-with-icon">Add Event / Meet</a>
 		{{/eventPage}}
 
 		{{^eventPage}}
 			<span class="event-sport-label">&nbsp;</span>
-			<a href="javascript: void(0);" title="add game" class="add-game-h right-with-icon">Add Game.</a>
+			<a href="javascript: void(0);" title="Add a Game" class="add-game-h right-with-icon">Add Game.</a>
 		{{/eventPage}}
 	</div>
 <div class="select-team">
