language and other changes

--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -20,7 +20,7 @@
 		
 		<div class="stats-panel span5" style="width:35%;">
 			<div class="stats-header">
-				<span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">Click to edit</span>{{/loggedInUser}}
+				<span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">Click an entry to edit</span>{{/loggedInUser}}
 			</div>
 			<div id="fitnessbasic-wrap"></div>
 		</div>
