--- a/html/pages/userresume/templates/rdtree.html
+++ b/html/pages/userresume/templates/rdtree.html
@@ -1,6 +1,6 @@
 <div class="sub-section-prof-setting">
 <div class="row-fluid">
-	<span class="green-left-heading">Work Outs</span>
+	<span class="green-left-heading">Personal Bests</span>
 </div>
 <div id="container-rdtree" class="row-fluid inset-data-entry">
 	{{#rdtrees}}
