--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -4,7 +4,9 @@
 	<div id="commenton-wrap" class="clearfix clear profile-comment-list-box"></div>
 	<div id="comment_div" class="clearfix"></div>
 	
-	<div class="green-left-heading">PHOTO/VIDEO</div>
+	
+	<div class="media-add-icons-h"></div>
+	<!-- <div class="green-left-heading"></div> -->
 	<div class="row-fluid" id="main-content">
 	<!-- <div id="video-wrap" class="clearfix"></div> -->
 		<div id="image-wrap" class="clearfix clear">
@@ -21,18 +23,9 @@
 	</div>
 	
 	<div class="green-left-heading">GAMES</div>
-	<div id="games_div" class="clearfix">
-		<!--div class="game-box-outer">
-		s	<ul>
-				<li><a href="javascript: void(0);" class="background-blue">a</a></li>
-				<li><a href="javascript: void(0);" class="background-orange">b</a></li>
-				<li><a href="javascript: void(0);" class="background-orange">c</a></li>
-				<li><a href="javascript: void(0);" class="background-orange">d</a></li>
-			</ul>
-		</div-->
-		
+	<div id="games_div" class="clearfix">		
 	</div>
-	<div class="green-left-heading">FANS</div>
+	<div class="fans-add-icons-h"></div>
 	<div id="fans-div" class="clearfix clear">&nbsp;</div>
 	
 	<div id="main-footer">
