--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -8,7 +8,7 @@
 <div id="comment_div" class="clearfix"></div>
 
 
-<div class="green-left-heading">PHOTO/VIDEO</div>
+<div class="media-add-icons-h"></div>
 	<div class="row-fluid" id="main-content">
 		<div id="image-wrap" class="clearfix clear">
 		</div>
@@ -26,7 +26,7 @@
 	<div id="games_div" class="clearfix">
 	</div>
 	
-	<div class="green-left-heading">FANS</div>
+	<div class="fans-add-icons-h"></div>
 	<div id="fans-div" class="clearfix clear">&nbsp;</div>
 
 	<div id="roster-wrap" class="clearfix clear"></div>
