--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2130,7 +2130,7 @@ li.sport .teamlist-header, .stat-val-outer {
 }
 
 .question {
-	background-position: -91px -1px;
+	background-position: -91px 0;
 	width: 30px;
 }
 
