adding result info to event popup

--- a/html/packages/game-schedules/templates/schedule-event-item.html
+++ b/html/packages/game-schedules/templates/schedule-event-item.html
@@ -2,7 +2,8 @@
 	<a href="#game/{{id}}" class="background-blue team-info-h">
 			<div class="game-info hide">
 				{{event_name}} | {{game_day}}<br/>
-				{{game_location}}
+				{{game_location}}<br/>
+				{{#result_time}}My Time: {{result_time}}{{/result_time}}
 			</div>
 	</a>
 {{/payload}}
