--- a/html_build/pages/game/templates/layout.html
+++ b/html_build/pages/game/templates/layout.html
@@ -1,7 +1,7 @@
 <div class="template-container">
 	<div id="main-header" class="profile-header"></div>
 
-	<div class="green-left-heading">PHOTO/VIDEO</div>
+	<div class="media-add-icons-h"></div>
 	<div class="row-fluid" id="main-content">
 		<!-- <div id="video-wrap" class="clearfix"></div> -->
 		<div id="image-wrap" class="clearfix clear">
