--- a/html/css/app.css
+++ b/html/css/app.css
@@ -666,6 +666,18 @@ span.ui-helper-hidden-accessible {
 	border: none !important;
 }
 
+/* UI MENU */
+
+.ui-menu-item a{
+    margin:-1px;
+
+}
+
+.ui-menu-item a span.sub-label{
+    font-size:.8em;
+    color: #575757;
+}
+
 /**
  ####################################  START COMMENTS ###########################################
  **/
@@ -1105,17 +1117,15 @@ a.add-game-h {
 
 div.game-info {
 	line-height: 25px;
-	bottom: 40px;
-	margin-left: -190px;
 	padding: 9px;
-	width: 460px;
+	width: 360px;
+    max-width: 360px !important;
 	height: auto;
 	background-color: white;
-	position: absolute;
-	float: left;
 	color: #333;
 	box-shadow: 4px 4px 5px #333;
 	border: 1px solid #ccc;
+    font-size: 1em;
 }
 div.game-info .game-day {
 	font-weight: bold;
