--- a/html_build/packages/game-schedules/templates/schedule-event-item.html
+++ b/html_build/packages/game-schedules/templates/schedule-event-item.html
@@ -1,9 +1,7 @@
 {{#payload}}
-	<a href="#game/{{id}}" class="background-blue team-info-h">
-			<div class="game-info hide">
-				{{event_name}} | {{game_day}}<br/>
-				{{game_location}}<br/>
-				{{#result_time}}My Time: {{result_time}}{{/result_time}}
-			</div>
-	</a>
+	<a href="#game/{{id}}" class="{{#result_time}}background-blue{{/result_time}}{{^result_time}}noscore{{/result_time}} team-info-h"><div class="game-info hide">
+		<span class="game-day">{{event_name}} <br/> {{game_day}}</span><br/>
+		<span class="team-name">{{game_location}}</span><br/>
+		{{#result_time}}<span class="game-score"><span class="team-score">{{result_time}}</span></span>{{/result_time}}
+	</div></a>
 {{/payload}}
