--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -310,10 +310,10 @@ div.image-item-container > img {
 .action-block.follow {
 	background-color: #9dca3c;
 }
-.action-block.edit {
-	background-color: #d36011;
-}
 .action-block.delete {
+	background-color: #C43737;
+}
+.action-block.edit {
 	background-color: #4b3ec6;
 }
 .action-block.delete-from-game {
@@ -954,6 +954,12 @@ div.game-info .game-score .team-score.loss {
 div.game-info .game-score .team-score.win {
 	background-color: #d36011;
 }
+div.game-info span.game-header{
+    display: block;
+    background-color: #d36011;
+    margin: -15px -15px 0 -15px;
+    padding: 15px 15px 5px 15px;
+}
 .btn-green {
 	color: #FFF;
 	border-radius: 0px;
@@ -1582,13 +1588,6 @@ li#add-icons ul {
 	line-height: 110px;
 	width: 110px;
 	display: inline-block;
-}
-div.edit {
-    background:url(http://cdn.athletez.com/resources/img/pencil-25.png) no-repeat;
-    background-size: cover;
-    height: 25px;
-    width: 25px;
-    cursor: pointer;
 }
 .player-share {
 	background:url(images/icons/social-sprite.png) no-repeat;
