--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -3,7 +3,7 @@
 
 	<div class="game-heading">
 		<!--div class="sports-h"></div-->
-		<a href="javascript: void(0);" class="game-edit-btn-h pull-right">Edit Game</a>
+		<a href="javascript: void(0);" class="game-edit-btn-h pull-right">Edit Event</a>
 		<div class="game-general">
 			<!--<div class="stretch"></div>-->
 			{{#shared}}
