--- a/html/packages/common/templates/add-media-buttons.html
+++ b/html/packages/common/templates/add-media-buttons.html
@@ -1,3 +1,3 @@
-<a href="javascript: void(0);" class="add-image add-icon add-image-h"></a>
-<a href="javascript: void(0);" class="add-video add-icon add-video-h"></a>
-<a href="javascript: void(0);" data-page="media" class="question question-h add-icon"></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-yellow-c" class="add-image add-icon add-image-h" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message}} {{data.message.photo}} {{/data.message}}"></a>
+<a href="javascript: void(0);" class="add-video add-icon add-video-h" data-tip-style="qtip-athletez qtip-red-c" data-content="{{#data.teamName}}Upload images of {{data.teamName}}{{/data.teamName}}{{#data.message.video}} {{data.message.video}} {{/data.message.video}}" ></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-question" data-content="this is for test" data-page="media" class="question question-h add-icon"></a>
