--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	
-	<div class="green-left-heading">GAMES</div>
+	<div class="games-add-icons-h"></div>
 	<div id="games_div" class="clearfix">		
 	</div>
 	<div class="fans-add-icons-h"></div>
