--- a/html/packages/common/templates/add-roster-buttons.html
+++ b/html/packages/common/templates/add-roster-buttons.html
@@ -1,3 +1,3 @@
-<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-team" data-content="Click here to add yourself to this team" class="add-to-roster-list add-icon add-to-roster-list-h"></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-team" data-content="Click here to add yourself to this team" class="add-to-roster-list link-disabled add-icon add-to-roster-list-h"></a>
 <a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-fb-c" data-content="Click here to invite friends from facebook that play for this team" class="invite-from-fb add-icon invite-roster-from-fb-h"></a>
 <a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-question" data-content="this is for test" data-page="roster" class="question add-icon"></a>
