--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -2,7 +2,7 @@
 	<div id="main-header"></div>
 	<div id="main-content" class="row-fluid">
 		<div class="green-left-heading">
-			Top Rated
+			Top Rated Profiles
 		</div>
 		<div id="top-rated" class="p-l-20 clearfix clear"></div>
 		<div id="menu" class="p-l-20 clear"></div>
