--- a/html_build/packages/common/templates/add-fans-buttons.html
+++ b/html_build/packages/common/templates/add-fans-buttons.html
@@ -1,3 +1,3 @@
-<a href="javascript: void(0);" class="add-to-list add-icon add-to-list-h"></a>
-<a href="javascript: void(0);" class="invite-from-fb add-icon invite-fans-from-fb-h"></a>
-<a href="javascript: void(0);" data-page="fans" class="question question-h add-icon"></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-green-c" data-content="{{#data.teamName}}Follow {{data.teamName}} and stay notified of any updates{{/data.teamName}}{{#data.message.addMe}} {{data.message.addMe}} {{/data.message.addMe}}" class="add-to-list add-icon add-to-list-h"></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-fb-c" data-content="{{#data.teamName}}Invite friends from facebook to get notified of any updates to {{data.teamName}}{{/data.teamName}}{{#data.message.fb}} {{data.message.fb}} {{/data.message.fb}}" class="invite-from-fb add-icon invite-fans-from-fb-h"></a>
+<a href="javascript: void(0);" data-tip-style="qtip-athletez qtip-question" data-content="The fans section shows a list of all people who receive notifications when there is any action on this page." data-page="fans" class="question question-h add-icon"></a>
