--- a/html_build/pages/home/templates/menu.html
+++ b/html_build/pages/home/templates/menu.html
@@ -42,7 +42,7 @@
 	</div-->
 	
 	<div id="sport" class="menu span3">
-		<a href="javascript:void(0)" class="menu-link-h sport-link-h">
+		<a href="javascript:void(0)" class="menu-link-h sport-link-h" title="Use this menu to filter the results to only show a specific sport.">
 			<span class="option-heading-h">ALL SPORTS</span>
 
 			<div class="caret-large-container">
@@ -72,7 +72,7 @@
 	</div>
 
 	<div id="location" class="menu span3">
-		<a href="javascript:void(0)" class="menu-link-h location-link-h"> <span class="option-heading-h">PLACE</span>
+		<a href="javascript:void(0)" class="menu-link-h location-link-h" title="Filter the results by location.  You can search for a state or a city in the United States and the results will be narrowed to that location."> <span class="option-heading-h">PLACE</span>
 			<div class="caret-large-container">
 				<span class="caret-large"></span>
 			</div>
@@ -90,7 +90,7 @@
 	</div>
 
 	<div id="views" class="menu span2">
-		<a href="javascript:void(0)" class="menu-link-h view-link-h"><span class="option-heading-h">ORDER</span>
+		<a href="javascript:void(0)" class="menu-link-h view-link-h" title="Choose how you want your results ordered."><span class="option-heading-h">ORDER</span>
 			<div class="caret-large-container">
 				<span class="caret-large"></span>
 			</div>
