added some clarity to the add org process.

--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -13,7 +13,7 @@
 </div>
 
 <div>
-	<span class="span2">What Club?</span>
+	<span class="span2">Club Name</span>
 	<input type="text" id="txt-club-club" placeholder="Just Start Typing" disabled="disabled"/>
 	<a class="add-club-h" href="javascript: void(0);">Couldn't Find your Club?</a>
 	<p class="field-error"></p>
