--- a/html/pages/profilesetting/templates/org.html
+++ b/html/pages/profilesetting/templates/org.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div>
-		<span class="span2">What {{type}}?</span>
+		<span class="span2">{{type}} Name?</span>
 		<input type="text" id="txt-{{type}}-{{type}}" placeholder="Just Start Typing" disabled="disabled"/>
 		<a class="add-{{type}}-h" href="javascript: void(0);">Add a New {{type}}</a>
 		<p class="field-error"></p>
