--- a/html_build/pages/profilesetting/templates/sportslevel.html
+++ b/html_build/pages/profilesetting/templates/sportslevel.html
@@ -1,6 +1,6 @@
 <div class="section-sportslevel">
 	<div class="select-sports-outer-h">
-		<span class="span2">Choose Sport</span>
+		<span class="span2">What Sport?</span>
 		<!-- class="ddl-school-sports"-->
 		<select class="ddl-sports" orgsid="{{orgsId}}" tabindex="0">
 			<option value="">Select Sport</option>
@@ -28,7 +28,7 @@
 			</div>
 			<div class="">
 				<!--<span class="floatLeft"><a href="javascript:void(0)" class="btn-add-level" orgsid="{{orgsId}}" tabindex="0">Add Level</a> </span>-->
-				<span class="floatRight"><a href="javascript:void(0)" class="common-btn common-btn-direction btn-Finish-Sports" tabindex="0">Finish</a> </span>
+				<span class="floatRight"><a href="javascript:void(0)" class="common-btn common-btn-direction btn-Finish-Sports" tabindex="0">Cancel</a> </span>
 			</div>
 		</div>
 	</div>
