--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -23,8 +23,7 @@
 	</div>
 </div>
 <div id="reg-landing"></div>
-		<!--
-<div id="alternative-actions">
-	<a href="javascript:void(0);" id="sign-in">Sign In</a>
+
+<div id="alternative-actions" style="height:100px;">
 	<a href="javascript:void(0);" id="browse">Browse Athletez.com</a>
-</div>-->
+</div>
