--- a/html/pages/registration/templates/register_facebook.html
+++ b/html/pages/registration/templates/register_facebook.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="field">
 			<div class="label">Password</div>
-			<input type="password" class="password" name="password" placeholder="Password Again"/>
+			<input type="password" class="password" name="password" placeholder="Password"/>
 		</div>
 		<div class="field">
 			<div class="label">Again</div>
