cleaned up new landing thing a little

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -80,7 +80,7 @@ ul {
 }
 
 header {
-/*	border-bottom: 1px solid #ccc; */register-wrapper
+/*	border-bottom: 1px solid #ccc;*/
 	padding-top: 2px;
 	padding-bottom: 2px;
 	background-color: #000;
