--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -15,7 +15,7 @@
 	
 	<div id="roster-wrap" class="clearfix clear"></div>
 	
-	<div class="green-left-heading participants-heading-h hide">PARTICIPANTS</div>
+	<div class="participants-add-icons-h participants-heading-h hide"></div>
 	<div id="participants_div" class="clearfix clear"></div>
 	
 	<div class="row-fluid">
