--- a/html/packages/common/templates/add-description.html
+++ b/html/packages/common/templates/add-description.html
@@ -3,7 +3,7 @@
 	<div class="left-text">
 		{{data.message.left}}
 	</div>
-	<div class="right-secton fans {{data.page}}">
+	<div class="right-secton {{data.className.mainDiv}} {{data.page}}">
 		{{#data.className.btn1}}
 			<div>
 				<a href="javascript: void(0);" data-target="{{data.className.btn1}}" class="btn1 add-icon-large"></a>
